--- a/index.html
+++ b/index.html
@@ -1,4 +1,44 @@
 ---
 layout: default
 title: Homepage
+blocks:
+  - id: cards-section
+    section-heading: Our services
+    card-border: false
+    card-loop:
+      - image: https://images.unsplash.com/photo-1607369816048-311ebd65f2ca?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+        heading: Lorem dolor
+        text: >-
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem audantium, dolor blanditiis!
+        button-text: 
+        button-link:
+      - image: https://images.unsplash.com/photo-1657927281749-7fdfd7541a5d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+        heading: Lorem dolor
+        text: >-
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem audantium, dolor blanditiis!
+        button-text: 
+        button-link:
+      - image: https://plus.unsplash.com/premium_photo-1673548917550-bd55b0febe08?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+        heading: Lorem dolor
+        text: >-
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem audantium, dolor blanditiis!
+        button-text: 
+        button-link:
+  - id: image-and-text-banner 
+    heading: Who we are
+    text: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla laborum id voluptates dicta cupiditate perferendis saepe. Repudiandae commodi accusantium dignissimos quisquam at impedit, fugit cumque distinctio quae architecto delectus amet?
+    button-text: Find out more
+    button-link: /index.html
+  - id: skinny-small-text-banner 
+    name-banner:
+      - text: Plants
+      - text: Architecture
+      - text: Lighting
+      - text: Interior Design
+      - text: Ambiance
+      - text: Decor
+
 ---
