added image grid
still need to make responsive

--- a/index.html
+++ b/index.html
@@ -40,5 +40,28 @@ blocks:
       - text: Interior Design
       - text: Ambiance
       - text: Decor
-
+  - id: image-grid 
+    heading: Heading
+    text: Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione, ipsa ea ut, suscipit inventore quos quisquam, corrupti animi deserunt eaque reiciendis non veritatis ipsam quibusdam nobis iusto repudiandae odit!
+    image-loop:
+      - image: https://images.unsplash.com/photo-1673973835658-dd0d86d2abff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://images.unsplash.com/photo-1547487253-76cc390843b4?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://plus.unsplash.com/premium_photo-1673548917237-0e02a90d1b16?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://plus.unsplash.com/premium_photo-1673548916754-aefad0c0955a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://images.unsplash.com/photo-1573820213805-b5146042cc49?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://images.unsplash.com/photo-1678942896530-dd2712f504f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://plus.unsplash.com/premium_photo-1673548917237-0e02a90d1b16?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://images.unsplash.com/photo-1678942896530-dd2712f504f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+      - image: https://plus.unsplash.com/premium_photo-1673548916754-aefad0c0955a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+    button-text: contact us
+    button-link: /index.html
 ---
