added the contact us section
also added a light-base color and fixed the buttons

--- a/index.html
+++ b/index.html
@@ -64,4 +64,10 @@ blocks:
         alt:
     button-text: contact us
     button-link: /index.html
+  - id: contact
+    heading: Contact us.
+    name-placeholder: any name will do
+    email-placeholder: we prefer something real
+    message-placeholder: we love a good compliment :)
+
 ---
