Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -6,33 +6,43 @@ blocks:
     section-heading: Our services
     card-border: false
     card-loop:
-      - image: https://images.unsplash.com/photo-1607369816048-311ebd65f2ca?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1607369816048-311ebd65f2ca?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
         heading: Lorem dolor
         text: >-
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem audantium, dolor blanditiis!
-        button-text: 
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          audantium, dolor blanditiis!
+        button-text:
         button-link:
-      - image: https://images.unsplash.com/photo-1657927281749-7fdfd7541a5d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1657927281749-7fdfd7541a5d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
         heading: Lorem dolor
         text: >-
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem audantium, dolor blanditiis!
-        button-text: 
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          audantium, dolor blanditiis!
+        button-text:
         button-link:
-      - image: https://plus.unsplash.com/premium_photo-1673548917550-bd55b0febe08?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://plus.unsplash.com/premium_photo-1673548917550-bd55b0febe08?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
         heading: Lorem dolor
         text: >-
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem audantium, dolor blanditiis!
-        button-text: 
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          audantium, dolor blanditiis!
+        button-text:
         button-link:
-  - id: image-and-text-banner 
+  - id: image-and-text-banner
     heading: Who we are
-    text: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla laborum id voluptates dicta cupiditate perferendis saepe. Repudiandae commodi accusantium dignissimos quisquam at impedit, fugit cumque distinctio quae architecto delectus amet?
+    text: >-
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla laborum id
+      voluptates dicta cupiditate perferendis saepe. Repudiandae commodi
+      accusantium dignissimos quisquam at impedit, fugit cumque distinctio quae
+      architecto delectus amet?
     button-text: Find out more
     button-link: /index.html
-  - id: skinny-small-text-banner 
+  - id: skinny-small-text-banner
     name-banner:
       - text: Plants
       - text: Architecture
@@ -40,27 +50,40 @@ blocks:
       - text: Interior Design
       - text: Ambiance
       - text: Decor
-  - id: image-grid 
+  - id: image-grid
     heading: Heading
-    text: Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione, ipsa ea ut, suscipit inventore quos quisquam, corrupti animi deserunt eaque reiciendis non veritatis ipsam quibusdam nobis iusto repudiandae odit!
+    text: >-
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione,
+      ipsa ea ut, suscipit inventore quos quisquam, corrupti animi deserunt
+      eaque reiciendis non veritatis ipsam quibusdam nobis iusto repudiandae
+      odit!
     image-loop:
-      - image: https://images.unsplash.com/photo-1673973835658-dd0d86d2abff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1673973835658-dd0d86d2abff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://images.unsplash.com/photo-1547487253-76cc390843b4?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1547487253-76cc390843b4?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://plus.unsplash.com/premium_photo-1673548917237-0e02a90d1b16?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://plus.unsplash.com/premium_photo-1673548917237-0e02a90d1b16?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://plus.unsplash.com/premium_photo-1673548916754-aefad0c0955a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://plus.unsplash.com/premium_photo-1673548916754-aefad0c0955a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://images.unsplash.com/photo-1573820213805-b5146042cc49?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1573820213805-b5146042cc49?q=80&w=2148&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://images.unsplash.com/photo-1678942896530-dd2712f504f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1678942896530-dd2712f504f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://plus.unsplash.com/premium_photo-1673548917237-0e02a90d1b16?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://plus.unsplash.com/premium_photo-1673548917237-0e02a90d1b16?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://images.unsplash.com/photo-1678942896530-dd2712f504f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://images.unsplash.com/photo-1678942896530-dd2712f504f7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
-      - image: https://plus.unsplash.com/premium_photo-1673548916754-aefad0c0955a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+      - image: >-
+          https://plus.unsplash.com/premium_photo-1673548916754-aefad0c0955a?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
         alt:
     button-text: contact us
     button-link: /index.html
@@ -69,5 +92,16 @@ blocks:
     name-placeholder: any name will do
     email-placeholder: we prefer something real
     message-placeholder: we love a good compliment :)
-
+  - id: cards-section
+    section-heading: Our services
+    card-loop:
+      - image: >-
+          https://images.unsplash.com/photo-1607369816048-311ebd65f2ca?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+        alt:
+        heading: Lorem dolor
+        text: >-
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+          audantium, dolor blanditiis!
+        button-text:
+        button-link:
 ---
