adding the option for adding client photo in the 'bg-image-and-text-banner'

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ blocks:
           audantium, dolor blanditiis!
         button-text:
         button-link:
-  - id: image-and-text-banner
+  - id: bg-image-and-text-banner
     heading: Who we are
     text: >-
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla laborum id
@@ -42,6 +42,7 @@ blocks:
       architecto delectus amet?
     button-text: Find out more
     button-link: /index.html
+    bg-image: https://plus.unsplash.com/premium_photo-1669863547357-b7d064cedaac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
   - id: skinny-small-text-banner
     name-banner:
       - text: Plants
